chore: code quality improvements, security fixes, and test coverage (#5)
* Replace custom XmlNode with DomTrip DOM model

Remove the custom XmlNode class and javax.xml.parsers parsing in favor
of DomTrip's Document/Element/Comment/Node which is already a dependency.
Expand/collapse state is now a separate Set<Node> instead of being
embedded in the node.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* chore: reduce code duplication and fix resource leaks

- Extract shared MojoHelper utility with convertDependency() and
  buildCollectRequest(), removing identical code from 4 Mojo classes
- Fix HttpURLConnection leaks by adding disconnect() in finally blocks
  in CentralSearchClient, OsvClient, and SearchTui
- Add selectedIndex() helper to all 6 TUI classes, replacing ~20
  inline tableState.selected() null-check ternaries

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* 📝 Add docstrings to `quick-fix/code-quality-improvements`

Docstrings generation was requested by @gnodet.

The following files were modified:

* `src/main/java/eu/maveniverse/maven/pilot/AnalyzeMojo.java`
* `src/main/java/eu/maveniverse/maven/pilot/AnalyzeTui.java`
* `src/main/java/eu/maveniverse/maven/pilot/AuditMojo.java`
* `src/main/java/eu/maveniverse/maven/pilot/CentralSearchClient.java`
* `src/main/java/eu/maveniverse/maven/pilot/ConflictsMojo.java`
* `src/main/java/eu/maveniverse/maven/pilot/ConflictsTui.java`
* `src/main/java/eu/maveniverse/maven/pilot/MojoHelper.java`
* `src/main/java/eu/maveniverse/maven/pilot/OsvClient.java`
* `src/main/java/eu/maveniverse/maven/pilot/PomMojo.java`
* `src/main/java/eu/maveniverse/maven/pilot/PomTui.java`
* `src/main/java/eu/maveniverse/maven/pilot/SearchTui.java`
* `src/main/java/eu/maveniverse/maven/pilot/TreeMojo.java`
* `src/main/java/eu/maveniverse/maven/pilot/TreeTui.java`
* `src/main/java/eu/maveniverse/maven/pilot/UpdatesTui.java`
* `src/main/java/eu/maveniverse/maven/pilot/XmlTreeModel.java`

These files were ignored:
* `src/t